# qtapp

./: .gitignore  CMakeLists.txt  Home.qml  Makefile  Note.txt  QtApp.service  Settings.qml  WebSocketClient.qml  build_qt_rpi.sh  deploy.sh  main.cpp  main.qml  main.qrc  rpi4-toolchain.cmake  rpi4_toolchain.cmake
qml/: Camera.qml  ConfirmationDialog.qml  Main.qml  Media.qml  NotificationBanner.qml  Record.qml  SoundManager.qml  Theme.qml  Utils.qml  WebSocketClient.qml
qml/Components/: BluetoothPairingDialog.qml  CallBanner.qml  ConfirmationDialog.qml  Header.qml  NotificationBanner.qml  ScreenSaver.qml
qml/PageView/: Call.qml  Camera.qml  Home.qml  Media.qml  Record.qml  Settings.qml
qml/PageView/Call/: Dial.qml  History.qml  PhoneBook.qml
qml/PageView/Settings/: BluetoothDevices.qml  Display.qml  Sound.qml
src/: SettingsManager.cpp  SettingsManager.h  SettingsManager.hpp  main.cpp
